fix: z-index

--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ html,body{
     height: 80vh;
     -webkit-filter: drop-shadow(5px 0px 30px rgba(0,0,0,0.6));
     filter: drop-shadow(5px 0px 30px rgba(0,0,0,0.6));
+    z-index: 100;
 }
 
 #sep-1{
